Update center button text

--- a/settings.yml
+++ b/settings.yml
@@ -2,6 +2,10 @@ align_center_text:
   default: "Centered Text"
   description:
     en: Enter the placeholder text that appears in the composer after the user clicks the button.
+align_center_button:
+  default: "Center"
+  description:
+    en: Enter the text for the title of the button in the composer.
 get_text:
   default: ""
   description:
