Add hidden option to composer

--- a/settings.yml
+++ b/settings.yml
@@ -6,6 +6,14 @@ align_center_button:
   default: "Center"
   description:
     en: Enter the text for the title of the button in the composer.
+hidden_text:
+  default: "Hidden Text"
+  description:
+    en: Enter the placeholder text that appears in the composer after the user clicks the button.
+hidden_button:
+  default: "Hide Selection"
+  description:
+    en: Enter the text for the title of the button in the composer.
 get_text:
   default: ""
   description:
@@ -29,6 +37,6 @@ delete_text:
 Svg_icons: 
   type: 'list'
   list_type: 'compact'
-  default: 'fa-align-center|fa-cloud|fa-align-right|fa-align-justify|fa-strikethrough|fa-underline|fa-indent|fa-columns|fa-superscript|fa-subscript'
+  default: 'fa-align-center|fa-cloud|fa-eye-slash|fa-align-right|fa-align-justify|fa-strikethrough|fa-underline|fa-indent|fa-columns|fa-superscript|fa-subscript'
   description: 
     en: "Include FontAwesome 5 icon classes for each icon used in the list."
